examples/pos/yes.pcl
program yes;
label l;
begin
  l: writeString("yes!");
  goto l;
end.
