examples/neg/function1.pcl
program function1;

begin
  foo(1, 2, 3);
end.
